--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ЖК «Лунное море» @mellyssy</title>
-
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
+  <header>Это шапка</header>
+  <main>Это тело страницы</main>
+  <footer>Это подвал</footer>
 </body>
 </html>
