--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <title>ЖК «Лунное море» @mellyssy</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-  <header>Это шапка</header>
+<body class="body">
+  <header class="header">
+    <nav class="d-flex">
+      <a href="#" class="nav-logo d-flex"><img class="header-logo" src="images/logo.svg" alt="логотип ЖК «Лунное море»"> <span class="nav-logo-text">Лунное море</span></a>
+      <ul class="nav-list d-flex">
+        <li class="nav-list-item">Преимущества</li>
+        <li class="nav-list-item">О ЖК</li>
+        <li class="nav-list-item">Места для отдыха</li>
+      </ul>
+    </nav>
+  </header>
   <main>Это тело страницы</main>
   <footer>Это подвал</footer>
 </body>
