add hero section

--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
 <body class="body">
   <header class="header">
     <nav class="d-flex">
-      <a href="#" class="nav-logo d-flex"><img class="header-logo" src="images/logo.svg" alt="логотип ЖК «Лунное море»"> <span class="nav-logo-text">Лунное море</span></a>
+      <a class="nav-logo d-flex"><img class="header-logo" src="images/logo.svg" alt="логотип ЖК «Лунное море»"> <span class="nav-logo-text">Лунное море</span></a>
       <ul class="nav-list d-flex">
-        <li class="nav-list-item">Преимущества</li>
-        <li class="nav-list-item">О ЖК</li>
-        <li class="nav-list-item">Места для отдыха</li>
+        <li class="nav-list-item"><a>Преимущества</a></li>
+        <li class="nav-list-item"><a>О ЖК</a></li>
+        <li class="nav-list-item"><a>Места для отдыха</a></li>
       </ul>
     </nav>
   </header>
-  <main>Это тело страницы</main>
+  <main>
+    <section class="hero-container d-flex">
+      <img class="hero-logo" src="images/logo.svg" alt="логотип ЖК «Лунное море»">
+      <h1 class="hero-header">ЖК «Лунное море»</h1>
+      <p class="hero-text">Место, откуда не хочется улетать</p>
+      <button class='hero-button'>Забронировать</button>
+    </section>
+  </main>
   <footer>Это подвал</footer>
 </body>
 </html>
