add info blocks to main

--- a/index.html
+++ b/index.html
@@ -11,20 +11,55 @@
   <header class="header">
     <nav class="d-flex">
       <a class="nav-logo d-flex"><img class="header-logo" src="images/logo.svg" alt="логотип ЖК «Лунное море»"> <span class="nav-logo-text">Лунное море</span></a>
-      <ul class="nav-list d-flex">
-        <li class="nav-list-item"><a>Преимущества</a></li>
-        <li class="nav-list-item"><a>О ЖК</a></li>
-        <li class="nav-list-item"><a>Места для отдыха</a></li>
+      <ul class="nav-list d-flex list-clear">
+        <li class="nav-list-item"><a href="#advantages-block">Преимущества</a></li>
+        <li class="nav-list-item"><a href="#about-block">О ЖК</a></li>
+        <li class="nav-list-item"><a href="#places-block">Места для отдыха</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <section class="hero-container d-flex">
+    <section class="hero-container d-flex mb-50">
       <img class="hero-logo" src="images/logo.svg" alt="логотип ЖК «Лунное море»">
       <h1 class="hero-header">ЖК «Лунное море»</h1>
       <p class="hero-text">Место, откуда не хочется улетать</p>
       <button class='hero-button'>Забронировать</button>
     </section>
+    <section class="advantages w-1000 mb-50" id="advantages-block">
+      <ul class="advantages-list list-clear d-flex">
+        <li class="advantages-list-item">
+          <h2 class="fs-175em">Уникальный вид</h2>
+          <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
+        </li>
+        <li class="advantages-list-item">
+          <h2 class="fs-175em">Инфраструктура</h2>
+          <p>Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
+        </li>
+        <li class="advantages-list-item">
+          <h2 class="fs-175em">Близость к Москве</h2>
+          <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
+        </li>
+      </ul>
+    </section>
+    <section class="about mb-50" id="about-block">
+      <div class="about-container w-1000 d-flex">
+        <div class="about-text mr-100">
+          <h2 class="fs-175em">О ЖК «Лунное море»</h2>
+          <p>Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
+          <p>Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
+        </div>
+        <img class="content-img" src="images/moon-1.jpg" alt="Луна, спутник Земли">
+      </div>
+    </section>
+    <section class="places w-1000 d-flex mb-50" id="places-block">
+      <img class="content-img mr-100" src="images/moon-2.jpg" alt="Космонавт на Луне">
+      <div class="places-text">
+        <h2 class="fs-175em">Места для отдыха</h2>
+        <p>Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
+        <p>Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
+      </div>
+    </section>
+    <section class="places"></section>
   </main>
   <footer>Это подвал</footer>
 </body>
