--- a/index.html
+++ b/index.html
@@ -5,77 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ЖК «Лунное море» @mellyssy</title>
+    <link rel="icon" href="images/favicon.ico" type="image">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="body">
-  <header class="header">
+  <header class="header fw-bold bs-borderbox">
     <nav class="d-flex">
-      <a class="nav-logo d-flex"><img class="header-logo" src="images/logo.svg" alt="логотип ЖК «Лунное море»"> <span class="nav-logo-text">Лунное море</span></a>
-      <ul class="nav-list d-flex list-clear">
-        <li class="nav-list-item"><a href="#advantages-block">Преимущества</a></li>
-        <li class="nav-list-item"><a href="#about-block">О ЖК</a></li>
-        <li class="nav-list-item"><a href="#places-block">Места для отдыха</a></li>
+      <a class="td-none ai-center"><img class="logo" src="images/logo.svg" alt="логотип ЖК «Лунное море»">Лунное море</a>
+      <ul class="ml-auto d-flex list-clear">
+        <li class="ml-20px"><a href="#advantages-block">Преимущества</a></li>
+        <li class="ml-20px"><a href="#about-block">О ЖК</a></li>
+        <li class="ml-20px"><a href="#places-block">Места для отдыха</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <section class="hero-container d-flex mb-50">
-      <img class="hero-logo" src="images/logo.svg" alt="логотип ЖК «Лунное море»">
+    <section class="hero-container d-flex jc-center fd-column ai-center mb-50 c-white p-20px">
+      <img class="h-200px" src="images/logo.svg" alt="логотип ЖК «Лунное море»">
       <h1 class="hero-header">ЖК «Лунное море»</h1>
       <p class="hero-text">Место, откуда не хочется улетать</p>
-      <a class='hero-button' href="#booking">Забронировать</a>
+      <a class="hero-button b-none c-pointer c-white fw-bold br-5px" href="#booking">Забронировать</a>
     </section>
-    <section class="advantages w-1000 mb-50" id="advantages-block">
-      <ul class="advantages-list list-clear d-flex">
-        <li class="advantages-list-item">
+    <section class="advantages w-1000 m-0-auto mb-50 scmt-100px" id="advantages-block">
+      <ul class="jc-spacebetween list-clear d-flex">
+        <li class="w-30percent">
           <h2 class="fs-175em">Уникальный вид</h2>
           <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
         </li>
-        <li class="advantages-list-item">
+        <li class="w-30percent">
           <h2 class="fs-175em">Инфраструктура</h2>
           <p>Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
         </li>
-        <li class="advantages-list-item">
+        <li class="w-30percent">
           <h2 class="fs-175em">Близость к Москве</h2>
           <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
         </li>
       </ul>
     </section>
-    <section class="p-50 mb-50 bg-c-f7" id="about-block">
-      <div class="about-container w-1000 d-flex">
-        <div class="about-text mr-100">
+    <section class="p-50 mb-50 bg-c-f7 scmt-100px" id="about-block">
+      <div class="jc-center w-1000 m-0-auto d-flex">
+        <div class="mw-520px mr-100">
           <h2 class="fs-175em">О ЖК «Лунное море»</h2>
           <p>Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
           <p>Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
         </div>
-        <img class="content-img" src="images/moon-1.jpg" alt="Луна, спутник Земли">
+        <img class="h-250px" src="images/moon-1.jpg" alt="Луна, спутник Земли">
       </div>
     </section>
-    <section class="places w-1000 d-flex mb-50" id="places-block">
-      <img class="content-img mr-100" src="images/moon-2.jpg" alt="Космонавт на Луне">
+    <section class="places w-1000 m-0-auto d-flex mb-50 scmt-100px" id="places-block">
+      <img class="h-250px mr-100" src="images/moon-2.jpg" alt="Космонавт на Луне">
       <div class="places-text">
         <h2 class="fs-175em">Места для отдыха</h2>
         <p>Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
         <p>Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
       </div>
     </section>
-    <section id="booking" class="booking bg-c-f7 p-50">
-      <form class="w-450 d-flex form-container"> 
+    <section id="booking" class="booking bg-c-f7 p-50 scmt-100px">
+      <form class="w-450 d-flex fd-column ai-center m-0-auto"> 
         <h2 class="fs-175em mb-30">Оставьте заявку сегодня!</h2>
-        <fieldset class="booking-fieldset d-flex mb-20">
-          <legend class="c-turquoise booking-fieldset-legend">Параметры квартиры</legend>
-          <label class="d-flex booking-label">
-            <span class="booking-label-text">Количество комнат:</span> 
-            <select class="booking-input" name="rooms">
+        <fieldset class="booking-fieldset d-flex mb-20 bs-borderbox p-20px">
+          <legend class="c-turquoise fw-bold fs-1p2em">Параметры квартиры</legend>
+          <label class="d-flex p-relative ai-center">
+            <span class="booking-label-text fw-bold">Количество комнат:</span> 
+            <select class="booking-input br-5px booking-select" name="rooms">
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
             </select>
             <span class="booking-arrow"></span>
           </label>
-          <label class="d-flex booking-label">
-            <span class="booking-label-text">Отделка:</span> 
-            <select class="booking-input" name="interior">
+          <label class="d-flex p-relative ai-center">
+            <span class="booking-label-text fw-bold">Отделка:</span> 
+            <select class="booking-input br-5px booking-select" name="interior">
               <option value="no-interior">Без отделки</option>
               <option value="with-interior">С отделкой</option>
               <option value="a-bit">Немного отделки</option>
@@ -83,22 +84,43 @@
             <span class="booking-arrow"></span>
           </label>
         </fieldset>
-        <fieldset class="booking-fieldset mb-20">
-          <legend class="c-turquoise booking-fieldset-legend">Контактная информация</legend>
-            <label class="d-flex booking-label"><span class="booking-label-text">Имя:</span>
-              <input class="booking-input" type="text" name="name">
+        <fieldset class="booking-fieldset mb-20 bs-borderbox p-20px">
+          <legend class="c-turquoise fw-bold fs-1p2em">Контактная информация</legend>
+            <label class="d-flex p-relative ai-center"><span class="booking-label-text fw-bold">Имя:</span>
+              <input class="booking-input br-5px" type="text" name="name">
             </label>
-            <label class="d-flex booking-label"><span class="booking-label-text">Телефон:</span>
-              <input class="booking-input" type="tel" name="phone">
+            <label class="d-flex p-relative ai-center"><span class="booking-label-text fw-bold">Телефон:</span>
+              <input class="booking-input br-5px" type="tel" name="phone">
             </label> 
-            <label class="d-flex booking-label"><span class="booking-label-text">E-mail:</span>
-              <input class="booking-input" type="email" name="email">
+            <label class="d-flex p-relative ai-center"><span class="booking-label-text fw-bold">E-mail:</span>
+              <input class="booking-input br-5px" type="email" name="email">
             </label>
         </fieldset>
-        <button class="booking-btn c-turquoise">Отправить</button>
+        <button class="booking-btn b-none br-5px fw-bold c-turquoise">Отправить</button>
       </form>
     </section>
   </main>
-  <footer>Это подвал</footer>
+  <footer class="bgc-303846">
+    <div class="footer-container jc-spacebetween c-white w-1000 m-0-auto d-flex">
+      <div>
+        <p class="fw-bold"><img class="logo va-middle" src="images/logo.svg" alt="логотип ЖК «Лунное море»">Лунное море</p>
+        <p class="fs-12px">&#169; 2032 год</p>
+      </div>
+      <div>
+        <h3>Проектная документация</h3>
+        <ul class="c-white">
+          <li><a class="c-white fs-14px c-pointer">Скачать</a></li>
+          <li><a class="c-white fs-14px c-pointer">Посмотреть на сайте</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3>О застройщике</h3>
+        <ul>
+          <li><a class="c-white fs-14px c-pointer">Отзывы</a></li>
+          <li><a class="c-white fs-14px c-pointer">Сайт компании</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
