--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section id="booking" class="booking bg-c-f7 p-50 scmt-100px">
       <form class="w-450 d-flex fd-column ai-center m-0-auto"> 
         <h2 class="fs-175em mb-30">Оставьте заявку сегодня!</h2>
-        <fieldset class="booking-fieldset d-flex mb-20 bs-borderbox p-20px">
+        <fieldset class="booking-fieldset mb-20 bs-borderbox p-20px">
           <legend class="c-turquoise fw-bold fs-1p2em">Параметры квартиры</legend>
           <label class="d-flex p-relative ai-center">
             <span class="booking-label-text fw-bold">Количество комнат:</span> 
